force-app/main/default/objects/Sales_Rep_Touchpoint__c/Sales_Rep_Touchpoint__c.object-meta.xml
<CustomObject>
    <description>Created to capture calls to ZB sales reps from company leadership during the Corona Virus slowdown</description>
    <label>Sales Rep Touchpoint</label>
    <nameField>
        <displayFormat>TP- {000000}</displayFormat>
        <label>Sales Rep Touchpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Touchpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>