force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Call_Count_Not_Complete__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_Not_Complete__c</fullName>
    <formula>IF(
  OR(
    TEXT( Spoke_with_Sales_Rep__c) = &quot;No&quot;,
     ISBLANK(TEXT( Spoke_with_Sales_Rep__c))
    
    ),
  
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Count Not Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>