force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <description>Date call was placed to Sales Rep</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>