force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Contact&apos;s division</description>
    <inlineHelpText>Contact&apos;s division</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CMF&amp;T</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>SET</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>ZB Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>