force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact&apos;s email address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact&apos;s email address</inlineHelpText>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>