force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Sales Rep&apos;s phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sales Rep&apos;s phone number</inlineHelpText>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>