force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Contact&apos;s region, requested to be free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact&apos;s region</inlineHelpText>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>