force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Remarks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Comments__c</fullName>
    <description>Recorded notable comments from sales rep during call</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Recorded notable comments from sales rep during call</inlineHelpText>
    <label>Remarks/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>