force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Spoke_with_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Spoke_with_Sales_Rep__c</fullName>
    <label>Spoke with Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#78C953</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>