force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <description>Entered name of Team Member - non related free text requested</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of Team Member to be called</inlineHelpText>
    <label>Team Member Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>