force-app/main/default/objects/Sales_Rep_Touchpoint__c/fields/Team_Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Title__c</fullName>
    <description>Title of Team Member if provided</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Member Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>