force-app/main/default/objects/Sales_Rep_Touchpoint__c/listViews/All_Sales_Rep_Touchpoints.listView-meta.xml
<ListView>
    <fullName>All_Sales_Rep_Touchpoints</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Team_Member_Name__c</columns>
    <columns>Spoke_with_Sales_Rep__c</columns>
    <columns>Team_Member_Title__c</columns>
    <columns>Region__c</columns>
    <columns>Call_Date__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Rep Touchpoints</label>
</ListView>