force-app/main/default/objects/Sales_Rep_Touchpoint__c/listViews/My_Called_Touchpoints.listView-meta.xml
<ListView>
    <fullName>My_Called_Touchpoints</fullName>
    <columns>NAME</columns>
    <columns>Team_Member_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Call_Date__c</columns>
    <columns>Spoke_with_Sales_Rep__c</columns>
    <columns>Remarks_Comments__c</columns>
    <columns>Email__c</columns>
    <columns>Division__c</columns>
    <columns>Region__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Spoke_with_Sales_Rep__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>My Called Touchpoints</label>
</ListView>